[gd_scene load_steps=5 format=3 uid="uid://d0ymxfeme5luf"]

[ext_resource type="Script" path="res://levels/parent_level/tiles/ink_detector.gd" id="1_usp8u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u62e5"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2ijp"]
size = Vector2(129, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1viq"]
size = Vector2(128, 128)

[node name="InkDetector" type="Node2D"]
script = ExtResource("1_usp8u")

[node name="PaintDetection" type="Area2D" parent="." groups=["white_tiles"]]
collision_layer = 2
collision_mask = 2

[node name="PaintDetectionShape2D" type="CollisionShape2D" parent="PaintDetection"]
position = Vector2(-0.25, -0.5)
shape = SubResource("RectangleShape2D_u62e5")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="PlayerDetectionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_e2ijp")

[node name="Platform" type="RigidBody2D" parent="."]
freeze = true

[node name="PlatformShape2D" type="CollisionShape2D" parent="Platform"]
modulate = Color(1, 0.47451, 0.658824, 1)
shape = SubResource("RectangleShape2D_k1viq")
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="PaintedSquare" type="ColorRect" parent="."]
visible = false
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0

[connection signal="area_entered" from="PaintDetection" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="PaintDetection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PaintDetection" to="." method="_on_area_2d_body_exited"]
